Fix overflow

--- a/assets/css/sensei-course-theme/quiz.scss
+++ b/assets/css/sensei-course-theme/quiz.scss
@@ -40,6 +40,7 @@
 		}
 
 		&__left {
+			min-width: 0;
 		}
 
 		&__right {
